Made template skeleton for html thingy

--- a/html/index.html
+++ b/html/index.html
@@ -2,13 +2,33 @@
 <html lang="en">
 
     <head>
+        <meta name="Comp 2800 Template" content="Comp 2800">
 
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Other libraries go here -->
+
+        <!-- Link to styles of your own -->
+
+        <!-- Google Icons-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+        <!-- <style sheet> -->
+        <link rel="stylesheet" href="./styles/style.css">
     </head>
-
-
-    
+   
     <body>
-        <h1></h1>
+        <!-- Navbar -->
+
+        <!-- Body -->
+
+        <!-- Footer -->
+
+        <!-- Link to scripts of your own -->
+        <script src="./scripts/script.js"></script>
     </body>
 
 </html>
