--- a/html/index.html
+++ b/html/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta name="Comp 2800 Template" content="Comp 2800">
+<head>
+    <meta name="Comp 2800 Template" content="Comp 2800">
 
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Other libraries go here -->
+    <!-- Other libraries go here -->
 
-        <!-- Link to styles of your own -->
+    <!-- Link to styles of your own -->
 
-        <!-- Google Icons-->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Google Icons-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
-        <!-- <style sheet> -->
-        <link rel="stylesheet" href="./styles/style.css">
-    </head>
-   
-    <body>
-        <!-- Navbar -->
+    <!-- <style sheet> -->
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
+</head>
 
-        <!-- Body -->
+<body>
+    <!-- Navbar -->
 
-        <!-- Footer -->
+    <!-- Body -->
+    <div class="title">
+        <img src="/img/Comp2800Logo.png" alt="logo">
+    </div>
 
-        <!-- Link to scripts of your own -->
-        <script src="./scripts/script.js"></script>
-    </body>
+    <div>
+        <button type="button" class="button">Login</button>
+        <button type="button" class="button">Sign Up</button>
+    </div>
+    <!-- Footer -->
+
+    <!-- Link to scripts of your own -->
+    <!-- <script src="./scripts/script.js"></script> -->
+</body>
 
 </html>
