Starting authentication added other pages to start for now

--- a/html/login.html
+++ b/html/login.html
@@ -29,8 +29,11 @@
     </div>
 
     <div>
-        <button type="button" onclick="location.href='login.html'" class="button">Login</button>
-        <button type="button" onclick="location.href='signup.html'" class="button">Sign Up</button>
+        <form>
+            <input type="email" id="email" placeholder="Email or Name">
+            <input type="password" id="password" placeholder="Password">
+        </form>
+        <button type="button" onclick="login()" class="button">Login</button>
     </div>
     <!-- Footer -->
 
