--- a/html/signup.html
+++ b/html/signup.html
@@ -29,8 +29,12 @@
     </div>
 
     <div>
-        <button type="button" onclick="location.href='login.html'" class="button">Login</button>
-        <button type="button" onclick="location.href='signup.html'" class="button">Sign Up</button>
+        <form>
+            <input type="text" id="name" placeholder="Name">
+            <input type="email" id="email" placeholder="Email">
+            <input type="password" id="password" placeholder="Password">
+        </form>
+        <button type="button" onclick="signup()" class="button">Sign Up</button>
     </div>
     <!-- Footer -->
 
