temp pages created

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 
 
     <!-- <style sheet> -->
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/index.css">
 </head>
 
 <body>
@@ -29,7 +29,10 @@
     </div>
 
     <div>
-        <button type="button" class="button">Login</button>
+        <a href="main.html">
+            <button type="button" class="button">Login</button>
+        </a>
+        
         <button type="button" class="button">Sign Up</button>
     </div>
     <!-- Footer -->
