Taking break for a bit but this is current progress

--- a/html/login.html
+++ b/html/login.html
@@ -30,8 +30,9 @@
 
     <div>
         <form>
-            <input type="email" id="email" placeholder="Email or Name">
-            <input type="password" id="password" placeholder="Password">
+            <input type="text" id="name" placeholder="Full Name"/>
+            <input type="email" id="email" placeholder="Email or Name"/>
+            <input type="password" id="password" placeholder="Password"/>
         </form>
         <button type="button" onclick="login()" class="button">Login</button>
     </div>
