--- a/html/signup.html
+++ b/html/signup.html
@@ -34,7 +34,7 @@
             <input type="email" id="email" placeholder="Email">
             <input type="password" id="password" placeholder="Password">
         </form>
-        <button type="button" onclick="signup()" class="button">Sign Up</button>
+        <button type="button" onclick="save()" class="button">Sign Up</button>
     </div>
     <!-- Footer -->
 
