configured firebase authentication and login

--- a/html/main.html
+++ b/html/main.html
@@ -55,8 +55,9 @@
             <input type="image" class="footerButton" src="/img/ProfileButton.png">
         </a>
     </footer>
-    <!-- Link to scripts of your own -->
-    <!-- <script src="./scripts/script.js"></script> -->
+
+    <!-- Link to scripts of our own -->
+    <script src="../scripts/skeleton.js"></script>
 </body>
 
 </html>
