--- a/html/index.html
+++ b/html/index.html
@@ -2,23 +2,42 @@
 <html lang="en">
 
 <head>
-    <meta name="Comp 2800 Template" content="Comp 2800">
-
+    <title>FitUp</title>
+    <meta name="comp2800 template" content="2800 Project App">
+  
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  
+    <!-- Bootstrap Library CSS CDN go here -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  
+    <!-- Boostrap Library JS CDN  go here -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+      </script>
+  
+    <!------------------------,-------------------------------->
+    <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
+    <!-------------------------------------------------------->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  
     <!-- Other libraries go here -->
-
-    <!-- Link to styles of your own -->
-
-    <!-- Google Icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
-    <!-- <style sheet> -->
-    <link rel="stylesheet" type="text/css" href="/styles/index.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Protest+Revolution&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="../styles/style.css">
+  </head>
 
 <body>
     <!-- Navbar -->
@@ -28,20 +47,27 @@
         <img src="/img/Comp2800Logo.png" alt="logo">
     </div>
 
-    <div>
+    <div class="p-5 mb-4 bg-light rounded-3" style="display:flex; justify-content:center;">
+        <div class="container-fluid py-5">
+          <!-- <h1 class="display-5 fw-bold">FitUp</h1> -->
+          <button id="login-btn" onclick="window.location.href='login.html'" class="btn"
+            type="button">Login</button><br /><br /><br /><br />
+          <a href="#" class="signup">Sign Up</a>
+        </div>
+      </div>
+
+    <!-- <div>
         <button type="button" onclick="location.href='login.html'" class="button">Login</button>
         <button type="button" onclick="location.href='signup.html'" class="button">Sign Up</button>
-    </div>
+    </div> -->
     <!-- Footer -->
+    <nav id="footerPlaceholder"></nav>
 
     <!-- Link to scripts of your own -->
     <!-- <script src="./scripts/script.js"></script> -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="../scripts/authentication.js"></script>
+    <script src="../scripts/firebaseAPI_TEAMBBY29.js"></script>
     <script src="../scripts/index.js"></script>
-    <script src="../scripts/firebaseSDK.js"></script>
+    <script src="../scripts/skeleton.js"></script>
 </body>
 
 </html>
