--- a/html/main.html
+++ b/html/main.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Other libraries go here -->
-
+    
     <!-- Link to styles of your own -->
 
     <!-- Google Icons-->
@@ -18,7 +18,8 @@
 
     <!-- <style sheet> -->
     <link rel="stylesheet" type="text/css" href="/styles/main.css">
-</head>
+
+    <head></head>
 
 <body>
     <!-- Navbar -->
@@ -30,29 +31,63 @@
         </div>
         <br>
         <a href="index.html">
-            <input type="image" class="navButton" src="/img/FitnessButton.png">
+            <input type="image" class="navButton" src="../img/FitnessButton.png">
         </a>
         <a href="index.html">
-            <input type="image" class="navButton" src="/img/EcoButton.png">
+            <input type="image" class="navButton" src="../img/EcoButton.png">
         </a>
         <a href="index.html">
-            <input type="image" class="navButton" src="/img/DietButton.png">
+            <input type="image" class="navButton" src="../img/DietButton.png">
         </a>
     </nav>
 
     <!-- Body -->
 
+    <table>
+        <tr>
+            <td>1</td>
+            <td><input type="image" class="players" src="../img/player1.png"></td>
+            <td>Data 1,3</td>
+            <td>Data 1,4</td>
+            <td>Data 1,5</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td><input type="image" class="players" src="../img/player2.png"></td>
+            <td>Data 2,3</td>
+            <td>Data 2,4</td>
+            <td>Data 2,5</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td><input type="image" class="players" src="../img/player3.png"></td>
+            <td>Data 3,3</td>
+            <td>Data 3,4</td>
+            <td>Data 3,5</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td><input type="image" class="players" src="../img/player4.png"></td>
+            <td>Data 4,3</td>
+            <td>Data 4,4</td>
+            <td>Data 4,5</td>
+        </tr>
+    </table>
+    
+    <table>
+
+    </table>
 
     <!-- Footer -->
     <footer>
         <a href="index.html">
-            <input type="image" class="footerButton" src="/img/CommunityButton.png">
+            <input type="image" class="footerButton" src="../img/CommunityButton.png">
         </a>
         <a href="index.html">
-            <input type="image" class="footerButton" src="/img/HomeButton.png">
+            <input type="image" class="footerButton" src="../img/HomeButton.png">
         </a>
         <a href="index.html">
-            <input type="image" class="footerButton" src="/img/ProfileButton.png">
+            <input type="image" class="footerButton" src="../img/ProfileButton.png">
         </a>
     </footer>
 
