--- a/html/main.html
+++ b/html/main.html
@@ -47,28 +47,28 @@
         <tr>
             <td>1</td>
             <td><input type="image" class="players" src="../img/player1.png"></td>
-            <td>Data 1,3</td>
+            <td>player 1</td>
             <td>Data 1,4</td>
             <td>Data 1,5</td>
         </tr>
         <tr>
             <td>2</td>
             <td><input type="image" class="players" src="../img/player2.png"></td>
-            <td>Data 2,3</td>
+            <td>player 2</td>
             <td>Data 2,4</td>
             <td>Data 2,5</td>
         </tr>
         <tr>
             <td>3</td>
             <td><input type="image" class="players" src="../img/player3.png"></td>
-            <td>Data 3,3</td>
+            <td>player 3</td>
             <td>Data 3,4</td>
             <td>Data 3,5</td>
         </tr>
         <tr>
             <td>4</td>
             <td><input type="image" class="players" src="../img/player4.png"></td>
-            <td>Data 4,3</td>
+            <td>player 4</td>
             <td>Data 4,4</td>
             <td>Data 4,5</td>
         </tr>
