--- a/html/main.html
+++ b/html/main.html
@@ -31,7 +31,6 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
 
-    
     <!-- Google Icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -133,6 +132,7 @@
     <script src="../scripts/firebaseSDK.js"></script>
     <script src="../scripts/authentication.js"></script>
     <script src="../scripts/main.js"></script>
+    <script src="../scripts/skeleton.js"></script>
 
 </body>
 
