--- a/html/main.html
+++ b/html/main.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  <title>Welcome to FitUp</title>
-  <meta name="Comp2800 template" content="FitUp">
+    <title>Welcome to FitUp</title>
+    <meta name="Comp2800 template" content="FitUp">
 
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap Library CSS CDN go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +15,7 @@
     <!-- Boostrap Library JS CDN  go here -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
+        </script>
 
     <!-- Other Library go here -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -26,26 +26,26 @@
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
-  <!-- Boostrap Library JS CDN  go here -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
+    <!-- Boostrap Library JS CDN  go here -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 
-    
+
     <!-- Google Icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!-- Other libraries go here -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Protest+Revolution&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.3/css/ionicons.min.css">
+    <!-- Other libraries go here -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Protest+Revolution&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.3/css/ionicons.min.css"> 
 
-  <!-- Link to styles of your own -->
-  <link rel="stylesheet" href="../styles/style.css">
+    <!-- Link to styles of your own -->
+    <link rel="stylesheet" href="../styles/style.css">
 
     <!-- <style sheet> -->
     <link rel="stylesheet" type="text/css" href="/styles/main.css">
@@ -55,7 +55,7 @@
 <body>
 
     <!-- This container will hold the dynamically loaded diary entries -->
-    <div class="row row-cols-4 row-cols-md-4 g-4" id="diaryEntriesContainer"></div>
+    <!-- <div class="row row-cols-4 row-cols-md-4 g-4" id="diaryEntriesContainer"></div> -->
 
     <nav>
         <div>
@@ -73,7 +73,14 @@
         <a href="index.html">
             <input type="image" class="navButton" src="../img/DietButton.png">
         </a>
-    </nav>
+    </nav> -->
+
+    <form id="form">
+        <label for="chatbot">Ask me</label>
+        <input type="text" id="question" name="chatbot">
+        <button type="submit">Send</button>
+    </form>
+    <div id='response'></div>
 
     <!-- Body -->
     <!-- Welcome messsge-->
@@ -129,10 +136,10 @@
     </footer>
 
     <!-- Link to scripts of our own -->
-    <script src="../scripts/firebaseAPI_TEAMBBY29.js"></script>
-    <script src="../scripts/firebaseSDK.js"></script>
+    <script src="../scripts/firebaseAPI_TEAMBBY29.js"></script> 
     <script src="../scripts/authentication.js"></script>
     <script src="../scripts/main.js"></script>
+    <script src="../scripts/chatbot.js"></script>
 
 </body>
 
