Get user input, post the request to API, and get response

--- a/html/main.html
+++ b/html/main.html
@@ -73,7 +73,7 @@
         <a href="index.html">
             <input type="image" class="navButton" src="../img/DietButton.png">
         </a>
-    </nav> -->
+    </nav> 
 
     <form id="form">
         <label for="chatbot">Ask me</label>
