--- a/html/new.html
+++ b/html/new.html
@@ -5,7 +5,12 @@
 </head>
 <body>
   <h1>Groq Chat Completion</h1>
-  <div id="chat-completion"></div>
+  <form id="form">
+    <label for="chatbot">Ask me</label>
+    <input type="text" id="question" name="question">
+    <button type="submit">Send</button>
+</form>
+<div id='response'></div>
   <script src="/scripts/script.js"></script>
 </body>
 </html>
