configured node.js for all current pages

--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
     <div class="p-5 mb-4 bg-light rounded-3" style="display:flex; justify-content:center;">
         <div class="container-fluid py-5">
           <!-- <h1 class="display-5 fw-bold">FitUp</h1> -->
-          <button id="login-btn" onclick="window.location.href='login.html'" class="btn"
+          <button id="login-btn" onclick="redirectToLogin(event)" class="btn"
             type="button">Login</button><br /><br /><br /><br />
           <a href="#" class="signup">Sign Up</a>
         </div>
@@ -60,9 +60,9 @@
     <nav id="footerPlaceholder"></nav>
 
     <!-- Link to scripts of your own -->
-    <script src="../scripts/firebaseAPI_TEAMBBY29.js"></script>
-    <script src="../scripts/index.js"></script>
-    <script src="../scripts/skeleton.js"></script>
+    <script src="/scripts/firebaseAPI_TEAMBBY29.js"></script>
+    <script src="/scripts/index.js"></script>
+    <script src="/scripts/skeleton.js"></script>
 </body>
 
 </html>
