--- a/html/main.html
+++ b/html/main.html
@@ -136,14 +136,10 @@
     </footer>
 
     <!-- Link to scripts of our own -->
-    <script src="../scripts/firebaseAPI_TEAMBBY29.js"></script> 
-    <script src="../scripts/authentication.js"></script>
-    <script src="../scripts/main.js"></script>
-<<<<<<< HEAD
-    <script src="../scripts/chatbot.js"></script>
-=======
-    <script src="../scripts/skeleton.js"></script>
->>>>>>> abcb40c08ba919aca1b817a27281968214e22872
+    <script src="/scripts/firebaseAPI_TEAMBBY29.js"></script> 
+    <script src="/scripts/authentication.js"></script>
+    <script src="/scripts/main.js"></script>
+    <script src="/scripts/skeleton.js"></script>
 
 </body>
 
