--- a/html/login.html
+++ b/html/login.html
@@ -103,9 +103,9 @@
     
       <!--  -->
       <!-- Your own JavaScript functions go here    -->
-      <script src="../scripts/firebaseAPI_TEAMBBY29.js"></script>
-      <script src="../scripts/skeleton.js"></script>
-      <script src="../scripts/authentication.js"></script>
+      <script src="/scripts/firebaseAPI_TEAMBBY29.js"></script>
+      <script src="/scripts/skeleton.js"></script>
+      <script src="/scripts/authentication.js"></script>
 </body>
 
 </html>
