Added and Sized Colorized Logo

--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
 
     <!-- Body -->
     <div class="title">
-        <img src="/img/Comp2800Logo.png" alt="logo">
+        <img src="/img/Logo.png" alt="logo" width="500" height="500">
     </div>
 
     <div class="p-5 mb-4 bg-light rounded-3" style="display:flex; justify-content:center;">
