Connected to mongo, modified sigun/login to save/user user data and create a session

--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,8 @@
           <!-- <h1 class="display-5 fw-bold">FitUp</h1> -->
           <button id="login-btn" onclick="redirectToLogin(event)" class="btn"
             type="button">Login</button><br /><br /><br /><br />
-          <a href="#" class="signup">Sign Up</a>
+          <button id="login-btn" onclick="redirectToSignup(event)" class="btn"
+            type="button">Signup</button><br /><br /><br /><br />
         </div>
       </div>
 
