--- a/html/login.html
+++ b/html/login.html
@@ -93,7 +93,12 @@
         <p class="col-md-8 fs-4">Where we bring farms to you!</p><br /><br /> -->
       </div>
       <div id="firebaseui-auth-container"></div>
-      <div id="loader">Loading...</div>
+      <h1>Login</h1>
+        <form action="/login" method="POST">
+          <input type="email" name="email" placeholder="Email">
+          <input type="password" name="password" placeholder="Password">
+          <button type="submit">Login</button>
+        </form>
     
       <div id="background-cover">
         <!-- <img id="cover-login" src="./images/veggie.jpg" alt="veggie"> -->
