--- a/html/signup.html
+++ b/html/signup.html
@@ -2,44 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta name="Comp 2800 Template" content="Comp 2800">
-
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Other libraries go here -->
-
-    <!-- Link to styles of your own -->
-
-    <!-- Google Icons-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
-    <!-- <style sheet> -->
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
 </head>
 
 <body>
-    <!-- Navbar -->
-
-    <!-- Body -->
     <div class="title">
         <img src="/img/Comp2800Logo.png" alt="logo">
     </div>
 
     <div>
-        <form>
-            <input type="text" id="name" placeholder="Name">
-            <input type="email" id="email" placeholder="Email">
-            <input type="password" id="password" placeholder="Password">
-        </form>
-        <button type="button" onclick="save()" class="button">Sign Up</button>
+        <h1>Sign Up</h1>
+                <form action="/signup" method="POST">
+                <input type="text" name="username" placeholder="Username"><br>
+                <input type="email" name="email" placeholder="Email"><br>
+                <input type="password" name="password" placeholder="Password"><br>
+                <button type="submit">Sign Up</button>
+                </form>
     </div>
-    <!-- Footer -->
 
-    <!-- Link to scripts of your own -->
-    <!-- <script src="./scripts/script.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
