display the name of the current user / display the assigned tasks

--- a/html/main.html
+++ b/html/main.html
@@ -60,8 +60,7 @@
 
   <!-- Welcome messsge -->
   <div class="px-4 py-5 my-5 text-center">
-    <h4 style="margin-bottom: 5%;" class="display-4">Are you ready to tackle the day,
-      <span id="name-goes-here"></span>?
+    <h4 style="margin-bottom: 5%;" class="display-4">Are you ready to tackle the day, <!-- USERNAME_PLACEHOLDER -->?
     </h4>
 
 
@@ -73,9 +72,6 @@
     </form>
 
     <!-- display images -->
-   
-   
-
     <div id="image-container">
       <!-- Images will be loaded here -->
     </div>
@@ -125,8 +121,7 @@
       </div>
     </div>
 
-    <!-- task container -->
-    <div class="row row-cols-4 row-cols-md-4 g-4" id="taskEntriesContainer"></div>
+    <!-- TASKS_PLACEHOLDER -->
 
     <br><button onclick="redirectToLogout(event)" class="btn">Logout</button>
     <!-- Footer -->
@@ -143,10 +138,10 @@
     </footer>
 
     <!-- Link to scripts of our own -->
-    <script src="/scripts/firebaseAPI_TEAMBBY29.js"></script>
-    <script src="/scripts/authentication.js"></script>
-    <script src="/scripts/main.js"></script>
-    <script src="/scripts/skeleton.js"></script>
+    <!-- <script src="/scripts/firebaseAPI_TEAMBBY29.js"></script> -->
+    <!-- <script src="/scripts/authentication.js"></script> -->
+    <!-- <script src="/scripts/main.js"></script> -->
+    <!-- <script src="/scripts/skeleton.js"></script> -->
 
 </body>
 
