Fixed MOST git conflicts

--- a/html/main.html
+++ b/html/main.html
@@ -42,10 +42,10 @@
   <!-- nav bar -->
   <nav>
     <br>
-    <a href="index.html">
+    <a href="fitTasks">
       <input type="image" class="navButton" src="../img/FitnessButton.png">
     </a>
-    <a href="index.html">
+    <a href="fitTasks">
       <input type="image" class="navButton" src="../img/DietButton.png">
     </a>
   </nav>
@@ -122,8 +122,10 @@
     </div>
 
     <!-- TASKS_PLACEHOLDER -->
-
-    <br><button onclick="redirectToLogout(event)" class="btn">Logout</button>
+    <div class="taskplace_holder">
+    </div>  
+	<br><button onclick="redirectToLogout(event)" class="btn">Task placeholder</button>
+    
     <!-- Footer -->
     <footer>
       <a href="index.html">
