adjust css for tasklist for visibility

--- a/html/main.html
+++ b/html/main.html
@@ -122,10 +122,7 @@
 
     <br><br>
 
-    <!-- TASKS_PLACEHOLDER -->
-    <div class="taskplace_holder">
-        <p>TASKS_PLACEHOLDER</p>
-    </div>
+    <ul><!-- TASKS_PLACEHOLDER --></ul>
 
     <form action="/logout" method="get" class="index-form">
       <button type="submit" class="index-btn">Logout</button>
