--- a/html/aichat-log.html
+++ b/html/aichat-log.html
@@ -102,6 +102,7 @@
   <footer></footer>
 
   <script src="/scripts/aichat-log.js"></script>
+  <script src="/scripts/audio-streaming.js"></script>
 </body>
 
 </html>
